# agenticrag

./: .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  DOCKER_README.md  MCP_A2A_INTEGRATION.md  RAG_Financial_POC_Document_Ingestion_Analysis.md  README.md  azure-deployment-config.json  build.bat  build.sh  docker-compose.backend-only.yml  docker-compose.prod.yml  docker-compose.yml  rag-financial-poc-complete-all-changes.patch
backend/: .dockerignore  .env  Dockerfile  pyproject.toml  removeenv.ps1  requirements.txt  test_backend_integration.py  test_multi_agent_orchestrator.py  test_multi_batch.py  test_observability_evaluation.py  test_rag_pipeline.py  test_realtime_batch.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: admin.py  chat.py  deployments.py  documents.py  evaluation.py  knowledge_base.py  qa.py  sec_documents.py  sec_library_fix.py
backend/app/core/: azure_ai_foundry_evaluators.py  config.py  evaluation.py  observability.py  tracing.py
backend/app/models/: evaluation.py  schemas.py  session.py
backend/app/services/: agentic_vector_rag_service.py  azure_ai_agent_service.py  azure_openai_deployment_service.py  azure_services.py  azure_storage_manager.py  credibility_assessor.py  document_processor.py  evaluation_service.py  foundry_evaluator_subprocess.py  knowledge_base_manager.py  mcp_server.py  multi_agent_orchestrator.py  performance_tracker.py  rag_pipeline.py  sec_document_service.py  token_usage_tracker.py  traditional_rag_service.py
backend/app/utils/: __init__.py  chunker.py
backend/tests/: test_session_integration.py  test_session_mapping.py
frontend/: .dockerignore  .env  .env.example  Dockerfile  index.html  (+5 more)
(+46 files in other folders)
